--- a/FrontEnd/src/pages/pantalla-inicio/pantalla-inicio.html
+++ b/FrontEnd/src/pages/pantalla-inicio/pantalla-inicio.html
@@ -12,5 +12,5 @@
 
 </ion-header>
 <ion-content padding>
-    <img src="https://mega.nz/#!r01hBQ6K!tl4YV6HmgVh2f7VbE4XNZtJRC4kdmebKqIkWvzhCOI8"/>
+    <img src="PantallaInicio.png"/>
 </ion-content>
