--- a/FrontEnd/src/pages/login/login.html
+++ b/FrontEnd/src/pages/login/login.html
@@ -14,3 +14,6 @@
   </ion-list>
   <button ion-button>OK</button>
 </ion-content>
+<ion-footer>
+    <ion-icon ios="logo-facebook" md="logo-facebook"></ion-icon>
+</ion-footer>
