--- a/FrontEnd/src/pages/receta-dettale/receta-dettale.html
+++ b/FrontEnd/src/pages/receta-dettale/receta-dettale.html
@@ -6,42 +6,24 @@
 -->
 <ion-header>
 
-  <ion-navbar>
-    <ion-title  >Recetas</ion-title>
-  </ion-navbar>
-  <div class = "row">
-      <ion-searchbar (search)="searchNombre($event)"></ion-searchbar>
-      <ion-list>
-          <ion-item *ngFor="let item of items">
-            {{ item }}
-          </ion-item>
-        </ion-list>
- </div>
-  <div class="row">
-    <ion-item>
-  <ion-label>Categoria</ion-label>
-  <ion-select [(ngModel)]="filtro" (ionChange)="searchCategory($event)">
-    <ion-option value="Postres">Postres</ion-option>
-    <ion-option value="Bocadillos">Bocadillos</ion-option>
-    <ion-option value="Entrada">Entrada</ion-option>
-    <ion-option value="Plato Fuerte">Plato Fuerte</ion-option>
-  </ion-select>
-</ion-item>
-  </div>
+  
 
 </ion-header>
 
 
 <ion-content padding>
-  <div>
-    <ion-grid>
-      <ion-row>
-        <ion-col col-6 col-md-4 col-xl-3 *ngFor="let image of recetas?.data">
-          <div class="image-container">
-            <img [src]="image.recimagen" alt="">
-          </div>
-        </ion-col>
-      </ion-row>
-    </ion-grid>
-  </div>
+    <img src="{{value.recimagen}}" alt="">
+    <label for="">Ingedientes</label>
+    <input type="hidden" value="hola" id="val"/>
+    <div *ngFor="let ingredientes of value.recingredientes.split(';')">
+        <p>
+          {{ingredientes}}
+        </p>
+    </div>
+    <div >
+        <button (click)="click($event)">
+            Comenzar Preparación
+       </button>
+    </div>
+   
 </ion-content>
