--- a/FrontEnd/src/pages/recetas/recetas.html
+++ b/FrontEnd/src/pages/recetas/recetas.html
@@ -37,10 +37,12 @@
 <ion-content padding>
     
   <div>
+    <h3>LAS MEJORES OPCIONES EN PAREJA:</h3>
     <ion-grid>
       <ion-row>
         <ion-col col-6 col-md-4 col-xl-3 *ngFor="let image of recetas?.data">
           <div class="image-container">
+              <h5>{{image.recnombre}}</h5>
               <button  (click)="click($event,image)" block>
                   <img [src]="image.recimagen" alt="">
              </button>
