--- a/FrontEnd/src/pages/register/register.html
+++ b/FrontEnd/src/pages/register/register.html
@@ -1,5 +1,5 @@
 <!--
-  Generated template for the LoginPage page.
+  Generated template for the RegisterPage page.
 
   See http://ionicframework.com/docs/components/#navigation for more info on
   Ionic pages and navigation.
@@ -7,7 +7,7 @@
 <ion-header>
 
   <ion-navbar>
-    <ion-title>Login</ion-title>
+    <ion-title>Register</ion-title>
   </ion-navbar>
 
 </ion-header>
