--- a/FrontEnd/src/pages/login/login.html
+++ b/FrontEnd/src/pages/login/login.html
@@ -12,7 +12,21 @@
 
 </ion-header>
 
-
 <ion-content padding>
-
+  <ion-list>
+    <ion-item>
+      <ion-label floating>Email</ion-label>
+      <ion-input type="email" [(ngModel)]="email"></ion-input>
+    </ion-item>
+    <ion-item>
+      <ion-label floating>Nombre de Usuario</ion-label>
+      <ion-input type="text" [(ngModel)]="password")]></ion-input>
+    </ion-item>
+  </ion-list>
+  <div padding>
+    <button ion-button color="secondary" (click)="myLogIn()">Log In</button>
+  </div>
+  <div padding>
+    <button ion-button color="secondary" (click)="myLogOut()">Log Out</button>
+  </div>
 </ion-content>
