Cronometro-Arreglo-SebastianVillacis

--- a/FrontEnd/src/pages/receta-dettale/receta-dettale.html
+++ b/FrontEnd/src/pages/receta-dettale/receta-dettale.html
@@ -23,8 +23,11 @@
   <div class="container">
     <div class="row">
       <div class="col"><button  ><img src="assets/imgs/radio-microphone.png" id="voz"></button></div>
-      <div class="col"><button><img src="assets/imgs/stopwatch.png" id="chrono"></button></div>
+      <div class="col"><button (click)="startTimer()"><img src="assets/imgs/stopwatch.png" id="chrono"></button></div>
     </div>
+    <!--AL hacer click en el icono del cronometro se deberia empezar a mmostrar los segudos trasncurridos-->
+    <!--Verificar-->
+    <p>{{timer}}</p>
   </div>
   
   <div>
