--- a/FrontEnd/src/pages/competencia/competencia.html
+++ b/FrontEnd/src/pages/competencia/competencia.html
@@ -15,6 +15,17 @@
   <ion-card>
    <ion-card-header>
        <img src="{{recetas.recimagen}}" class="center" style="    width: 100px;"/>
+       <h2>ACTIVAR</h2>
+        <hr class="new1" />
+        <div class="container">
+          <div class="row">
+            <div class="col"><button  ><img src="assets/imgs/radio-microphone.png" id="voz"></button></div>
+            <div class="col"><button (click)="startTimer()"><img src="assets/imgs/stopwatch.png" id="chrono"></button></div>
+          </div>
+          <!--AL hacer click en el icono del cronometro se deberia empezar a mmostrar los segudos trasncurridos-->
+          <!--Verificar-->
+          <p>{{timer}}</p>
+        </div>
    </ion-card-header>
    <ion-card-content style="height: 300px;">
     <ion-slides pager style="margin-top:10%;margin-bottom: 0%;" >
