--- a/FrontEnd/src/pages/competencia/competencia.html
+++ b/FrontEnd/src/pages/competencia/competencia.html
@@ -18,13 +18,9 @@
        <h2>ACTIVAR</h2>
         <hr class="new1" />
         <div class="container">
-          <div class="row">
-            <div class="col"><button  ><img src="assets/imgs/radio-microphone.png" id="voz"></button></div>
-            <div class="col"><button (click)="startTimer()"><img src="assets/imgs/stopwatch.png" id="chrono"></button></div>
-          </div>
           <!--AL hacer click en el icono del cronometro se deberia empezar a mmostrar los segudos trasncurridos-->
           <!--Verificar-->
-          <p>{{timer}}</p>
+          <p>Tiempo: {{timer}}</p>
         </div>
    </ion-card-header>
    <ion-card-content style="height: 300px;">
