--- a/FrontEnd/src/pages/competencia/competencia.html
+++ b/FrontEnd/src/pages/competencia/competencia.html
@@ -33,7 +33,7 @@
         <h2>
           SE TERMINARON LOS PASOS
         </h2>
-        <button ion-button large clear icon-end color="primary"(click)="YourFancyButton()" style="margin-bottom:10%;">
+        <button ion-button large clear icon-end color="primary"(click)="GuardarCompetencia()" style="margin-bottom:10%;">
           Finalizar
           <ion-icon name="arrow-forward"></ion-icon>
         </button>
