--- a/FrontEnd/src/pages/recetas/recetas.html
+++ b/FrontEnd/src/pages/recetas/recetas.html
@@ -53,7 +53,7 @@
   <div>
     
       <ion-row>
-        <ion-col  col-6 col-md-4 col-xl-3 *ngFor="let image of recetas?.data">
+        <ion-col   *ngFor="let image of recetas?.data">
             <ion-card>
 
                 <ion-card-header>
