--- a/FrontEnd/src/pages/competencia/competencia.html
+++ b/FrontEnd/src/pages/competencia/competencia.html
@@ -20,7 +20,7 @@
         <div class="container">
           <!--AL hacer click en el icono del cronometro se deberia empezar a mmostrar los segudos trasncurridos-->
           <!--Verificar-->
-          <p>Tiempo: {{timer}}</p>
+          <h1 style="color: red">Tiempo: {{timer}}</h1>
         </div>
    </ion-card-header>
    <ion-card-content style="height: 300px;">
@@ -45,3 +45,4 @@
 
 
 </ion-content>
+
