--- a/FrontEnd/src/pages/completar-receta/completar-receta.html
+++ b/FrontEnd/src/pages/completar-receta/completar-receta.html
@@ -42,7 +42,7 @@
     </ion-item>
   </ion-list><br>
 
-  <button ion-button color="danger" (click)="goBack()" round>OK</button>
+  <button ion-button color="danger" (click)="showAlert()" round>OK</button>
 
 </ion-card>
 </ion-content>
